--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -15306,8 +15306,9 @@ h6 {
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: #f1f3fa;
+  background-color: #313a46;
   z-index: 9999;
+  opacity: 0.7;
 }
 
 #status {
